--- a/回溯算法知识要点.md
+++ b/回溯算法知识要点.md
@@ -65,7 +65,7 @@
 ## 0.题目描述
 全排列问题$A_{n}^{n}$
 
-![在这里插入图片描述](https://img-blog.csdnimg.cn/20210127091534839.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MTQwNDU5Nw==,size_16,color_FFFFFF,t_70)
+![在这里插入图片描述](./image/20210127091534839.png)
 
 
 - 状态变量：每一个节点，表示了求解一个问题时所处的阶段性状态
