--- a/回溯算法知识要点.md
+++ b/回溯算法知识要点.md
@@ -1,7 +1,5 @@
-﻿
-@[TOC](目录)
-
-本博文写作参考程序员Carl 微信公众号（代码随想录），致谢！
+@[TOC](MULU)
+# 本博文写作参考程序员Carl 微信公众号（代码随想录），致谢！
 
 <hr style=" border:solid; width:100px; height:1px;" color=#000000 size=1">
 
