--- a/回溯算法知识要点.md
+++ b/回溯算法知识要点.md
@@ -1,17 +1,17 @@
 本博文写作参考程序员Carl 微信公众号（代码随想录），致谢！
 - [一、回溯是什么？](#一回溯是什么)
-  - [1. 回溯法能解决什么问题？](#1-回溯法能解决什么问题)
-  - [2. 回溯法的模板](#2-回溯法的模板)
+	- [1. 回溯法能解决什么问题？](#1-回溯法能解决什么问题)
+	- [2. 回溯法的模板](#2-回溯法的模板)
 - [二、回溯算法的步骤](#二回溯算法的步骤)
-  - [0.题目描述](#0题目描述)
-  - [1.设计状态变量](#1设计状态变量)
-  - [2.设定递归终止条件](#2设定递归终止条件)
-  - [3.单层操作](#3单层操作)
-  - [4.剪枝优化（选作）](#4剪枝优化选作)
+	- [0.题目描述](#0题目描述)
+	- [1.设计状态变量](#1设计状态变量)
+	- [2.设定递归终止条件](#2设定递归终止条件)
+	- [3.单层操作](#3单层操作)
+	- [4.剪枝优化（选作）](#4剪枝优化选作)
 - [三、总结](#三总结)
 <hr style=" border:solid; width:100px; height:1px;" color=#000000 size=1">
 
-回溯算法是一种遍历暴力穷举，时间复杂度很高。通常用于搜索一个问题所有的解，可通过深度优先遍历的思想实现。与动态规划的区别是，动态规划通常只需要求解最优解，而回溯要遍历所有解。
+回溯算法其实就是遍历穷举，时间复杂度很高。通常用于搜索一个问题所有的解，可通过深度优先遍历的思想实现。与动态规划的区别是，动态规划通常只需要求解最优解，而回溯要遍历所有解。
 
 # 一、回溯是什么？
 
