--- a/回溯算法知识要点.md
+++ b/回溯算法知识要点.md
@@ -11,7 +11,7 @@
 - [三、总结](#三总结)
 <hr style=" border:solid; width:100px; height:1px;" color=#000000 size=1">
 
-回溯算法其实就是遍历穷举，时间复杂度很高。通常用于搜索一个问题所有的解，可通过深度优先遍历的思想实现。与动态规划的区别是，动态规划通常只需要求解最优解，而回溯要遍历所有解。
+回溯算法其实就是遍历穷举，时间复杂度很高。通常用于搜索一个问题所有的解，可通过深度优先遍历的思想实现。其与动态规划的区别是，动态规划通常只需要求解最优解，而回溯要遍历所有解。
 
 # 一、回溯是什么？
 
