--- a/回溯算法知识要点.md
+++ b/回溯算法知识要点.md
@@ -15,7 +15,7 @@
 
 # 一、回溯是什么？
 
-**回溯法**采用试错的思想，它尝试分步地去解决一个问题，当发现有分步答案不正确的时候，它将**取消上一步**的计算，再尝试其他可能的解答。回溯法通常用递归来实现。再反复进行上述步骤之后可能出现两种情况：
+**回溯法**采用试错的思想，它尝试分步地去解决一个问题，当发现有分步答案不正确的时候，它将**取消上一步**的计算，再尝试其他可能的解答。回溯法通常用递归来实现。反复进行上述步骤之后可能出现两种情况：
 
  - 找到一个可能存在的正确答案
  - 尝试了所有的分步方法之后，宣告该问题没有答案
