--- a/配置/自动同步设置.md
+++ b/配置/自动同步设置.md
@@ -1,3 +1,7 @@
+- [vscode的环境配置](#vscode的环境配置)
+- [markdown的本地书写与git上传](#markdown的本地书写与git上传)
+- [markdown 添加目录的方法](#markdown-添加目录的方法)
+
 # vscode的环境配置
 
 安装settings sync插件
@@ -19,3 +23,7 @@ shift + alt + d 下载配置
 点击左下角第三个转圈的同步按钮
 
 就上传到github网站更新了
+
+# markdown 添加目录的方法
+
+点击F1，输入toc, 选择Create table of contents, 搞定!
