--- a/回溯算法知识要点.md
+++ b/回溯算法知识要点.md
@@ -9,6 +9,8 @@
 	- [3.单层操作](#3单层操作)
 	- [4.剪枝优化（选作）](#4剪枝优化选作)
 - [三、总结](#三总结)
+- [回溯算法练习题](#回溯算法练习题)
+	- [17题.电话号码的字母组合](#17题电话号码的字母组合)
 <hr style=" border:solid; width:100px; height:1px;" color=#000000 size=1">
 
 回溯算法其实就是遍历穷举，时间复杂度很高。通常用于搜索一个问题所有的解，可通过深度优先遍历的思想实现。其与动态规划的区别是，动态规划通常只需要求解最优解，而回溯要遍历所有解。
@@ -171,4 +173,12 @@ public:
  设计常规数据类型的目的应该还是为了在迭代过程中记录中间数据。
  那么应该怎样设计void还是普通数据类型呢？
  
+
+ # 回溯算法练习题
+
+下边对leetcode上出现的经典回溯题目进行总结分析
+
+## 17题.电话号码的字母组合
+
+本题目的难点之一是数据预处理
 
