--- a/回溯算法知识要点.md
+++ b/回溯算法知识要点.md
@@ -8,8 +8,8 @@
 	- [2.设定递归终止条件](#2设定递归终止条件)
 	- [3.单层操作](#3单层操作)
 	- [4.剪枝优化（选作）](#4剪枝优化选作)
-- [三、总结](#三总结)
-- [回溯算法练习题](#回溯算法练习题)
+- [三、要点分析与总结](#三要点分析与总结)
+- [四、回溯算法练习题](#四回溯算法练习题)
 	- [17题.电话号码的字母组合](#17题电话号码的字母组合)
 <hr style=" border:solid; width:100px; height:1px;" color=#000000 size=1">
 
@@ -39,6 +39,8 @@
 - 棋盘问题：N皇后，解数独
 
 从上边可以看出，回溯法要解决的问题都是**在集合中递归地查找子集合**，所以都可以抽象为树形结构的问题。
+
+回溯法要解决的其实就是N个for循环的问题。
 
 ## 2. 回溯法的模板
 1. 回溯函数模板返回值及参数：回溯算法函数返回值一般为void
@@ -118,7 +120,6 @@ for(int i=0; i<nums.size();i++)
 - 对于求和问题，通常先排序再在回溯过程中剪枝
 <hr style=" border:solid; width:100px; height:1px;" color=#000000 size=1">
 
-# 三、总结
 最终整体代码如下：
 ```cpp
 class Solution{
@@ -153,6 +154,7 @@ public:
 	}
 };
 ```
+# 三、要点分析与总结
 
 从过程可以看出，回溯三部曲和递归三部曲是一样的。
 - 确定函数类型及返回参数
@@ -174,11 +176,22 @@ public:
  那么应该怎样设计void还是普通数据类型呢？
  
 
- # 回溯算法练习题
+ # 四、回溯算法练习题
 
 下边对leetcode上出现的经典回溯题目进行总结分析
 
 ## 17题.电话号码的字母组合
 
-本题目的难点之一是数据预处理
+本题目的第一个难点是数据预处理
 
+主要是需要将数字的1-9怎么映射到a-z的26字母上，我自己还想不好用什么数据结构。答案上写的是
+
+> - 使用 map
+> - 使用二维数组 string letterMap[10]
+
+使用map的话我理解应该是把字母存成key，对应的数字存成value。
+使用二维数组为什么不用vector<vector<char>>呢？
+string的一维数组就相当于是char的二维数组吗
+具体要怎么转化？
+
+第二个难点是
