--- a/回溯算法知识要点.md
+++ b/回溯算法知识要点.md
@@ -11,6 +11,7 @@
 - [三、要点分析与总结](#三要点分析与总结)
 - [四、回溯算法练习题](#四回溯算法练习题)
 	- [17题.电话号码的字母组合](#17题电话号码的字母组合)
+	- [93题.复原IP地址](#93题复原ip地址)
 <hr style=" border:solid; width:100px; height:1px;" color=#000000 size=1">
 
 回溯算法其实就是遍历穷举，时间复杂度很高。通常用于搜索一个问题所有的解，可通过深度优先遍历的思想实现。其与动态规划的区别是，动态规划通常只需要求解最优解，而回溯要遍历所有解。
@@ -21,6 +22,10 @@
 
  - 找到可能存在的正确答案
  - 尝试了所有的分步方法之后，宣告该问题没有答案
+
+> andy95: 回溯是深度优先搜索中的一种情况，而深度优先搜索的实现是用递归。所以回溯和递归并不是一个相同概念。
+> Sophia_fez: 深度优先搜索是递归实现的，是要搜索整个二叉树的，在这个搜索的基础上，再加点回溯/剪枝的操作就是这一类排列组合的题了，是这个关系
+
 
 ## 1. 回溯法能解决什么问题？
 
@@ -194,4 +199,82 @@ public:
 string的一维数组就相当于是char的二维数组吗
 具体要怎么转化？
 
-第二个难点是
+> 取index指向的数字，并找到对应的字符集合。然后再遍历集合。
+
+```cpp
+int digit = digits[index] - '0';        // 将index指向的数字转为int
+string letters = letterMap[digit];      // 取数字对应的字符集
+```
+> 其中第一步的作用是取digits字符串的第index个位置的数字，目的就是确定字母。比如数字2，对应的字母就是"abc"
+
+> 第二步的作用就是把2转换成string类型的 "abc",然后遍历"abc"
+
+第二个难点是回溯参数，要设置index
+
+这个index不是其他问题中的startIndex, 而是记录遍历第几个数字了，就是用来遍历digits的（？？）
+
+同时index也表示树的深度(这个好理解，index到最大也就是digits.size()之后，说明树也到叶子节点了)
+
+所以终止条件就是 " index == digits.size() "
+
+第三个难点就是横向for的size是按照转换完的"abc"的size来遍历的。
+其他的是按照什么来遍历的呢？肯定也是横向的一组的
+- 有的是从startIndex开始，到整个字符串的size结束
+- 有的要剪枝，缩小范围
+- 有的是从0开始可以重复
+- 本题实际上是将字母数组"2"的size替换为了单个字母对应的"abc"的size
+
+## 93题.复原IP地址
+
+1. startIndex设定的目的是防止重复分割，记录下一层递归分割的起始位置。那么不设置startIndex应该就是不需要防止重复。
+比较特殊的参数就是pointNum，记录逗点的数量。开始怎么能想到这个参数呢？可能还是得需要做到后边才能想到吧。
+
+2. 与第131题分割回文串不同，本题明确要求分成四段，所以不能用切割线最后的位置来确定终止条件，而是应该以分割的段数作为终止条件。
+
+3. 这题还得单独考虑一种单断小节是否合法的判断，如果有前置0，大于255等情况出现，则认为是非法。
+还有要考虑**非0-9**的字符不合法
+为了方便起见，判断函数只需要输入开始截止坐标，免去先分割字串再传入参数判断的麻烦。
+```cpp
+isvalid(string s, int startIndex, int endIndex);
+```
+4. 单步循环逻辑里边需要用到截取字串的操作，和131题分割回文串一样的操作，就是通过控制for循环里边i的开始结束坐标，达到截取字串的目的。(???)
+
+```cpp
+for(int i=startIndex; i<s.size(); i++) {
+	string sample=substr(s[startIndex],s[i]);
+	if(!isvalid(sample))	break;
+	path.push_back(sample);
+	pointNum++;
+	backTracking(s, startIndex, pointNum);
+	path.pop_back();
+	pointNum--;
+}
+
+```
+从上边这段我自己写的代码，可以看出思路虽然在，但是最基础的字符串操作却不会。
+
+> - s.insert(s.begin() + index,'.') 表示在s[i]的前边插入一个逗点
+> - s.erase(s.begin() + index)		表示将s[i]删去
+
+所以答案不是用vector<char>这种push，而是直接在字符串上增删。
+
+另一个版本的错误代码
+```cpp
+void backTracking(string s, int& startIndex, int& pointNum) { //引用符号全用错
+        if(pointNum == 3) {
+            if(isValid(s, startIndex, s.size()-1))
+                res.push_back(s);
+            else
+                return;
+        }
+        for(int i = startIndex; i < s.size(); i++) {	//这里的范围不对
+            if(!isValid(s,startIndex ,startIndex+i)) break;	//范围不对
+            s.insert(s.begin() + i + 1,'.');
+            pointNum++;
+            backTracking(s, s.begin() + i + 2, pointNum); //这里的范围不对
+            pointNum--;
+            s.erase(s.begin() + i + 1);
+        }
+    }
+```
+
