--- a/回溯算法知识要点.md
+++ b/回溯算法知识要点.md
@@ -14,6 +14,7 @@
 	- [93题.复原IP地址](#93题复原ip地址)
 	- [40.组合总和II](#40组合总和ii)
 	- [90.子集II](#90子集ii)
+	- [491. 递增子序列](#491-递增子序列)
 <hr style=" border:solid; width:100px; height:1px;" color=#000000 size=1">
 
 回溯算法其实就是遍历穷举，时间复杂度很高。通常用于搜索一个问题所有的解，可通过深度优先遍历的思想实现。其与动态规划的区别是，动态规划通常只需要求解最优解，而回溯要遍历所有解。
@@ -317,4 +318,15 @@ if (i > startIndex && candidates[i] == candidates[i - 1] ) continue;
 - 树层去重
 - 树枝去重
 
+## 491. 递增子序列
+本题属于去重问题
 
+在90题中我们是先排序，再去重。
+本题是求自增子序列，不能对原数组进行排序，要不然就打乱原有的自增顺序了！
+尤其是题目中的[4,6,7,7]容易误导人按照90题的排序后的思想去做。
+其实应该分析[4,7,6,7]这样更一般的情况。
+
+1. 递归函数参数 很明显一个元素不能重复使用，所以需要startIndex,调整下一层递归的起点。
+2. 终止条件 
+- 题目要求递增子序列的大小至少为2
+- 不要加return 因为要取树上的所有节点，加了return就在每一个树枝上第一次push_back后就停止，不再遍历后边的树枝，无法到达真正的叶子节点。
