--- a/回溯算法知识要点.md
+++ b/回溯算法知识要点.md
@@ -15,6 +15,7 @@
 	- [40.组合总和II](#40组合总和ii)
 	- [90.子集II](#90子集ii)
 	- [491. 递增子序列](#491-递增子序列)
+	- [47.全排列II](#47全排列ii)
 <hr style=" border:solid; width:100px; height:1px;" color=#000000 size=1">
 
 回溯算法其实就是遍历穷举，时间复杂度很高。通常用于搜索一个问题所有的解，可通过深度优先遍历的思想实现。其与动态规划的区别是，动态规划通常只需要求解最优解，而回溯要遍历所有解。
@@ -330,3 +331,10 @@ if (i > startIndex && candidates[i] == candidates[i - 1] ) continue;
 2. 终止条件 
 - 题目要求递增子序列的大小至少为2
 - 不要加return 因为要取树上的所有节点，加了return就在每一个树枝上第一次push_back后就停止，不再遍历后边的树枝，无法到达真正的叶子节点。
+
+## 47.全排列II
+
+这道题目的核心是去重，首先要进行对数组元素进行排列。
+返回所有不重复的全排列。
+去重就涉及到used数组
+看起来好像和原来一样，但是我已经看不出细节的差异了。。
