--- a/回溯算法知识要点.md
+++ b/回溯算法知识要点.md
@@ -337,4 +337,19 @@ if (i > startIndex && candidates[i] == candidates[i - 1] ) continue;
 这道题目的核心是去重，首先要进行对数组元素进行排列。
 返回所有不重复的全排列。
 去重就涉及到used数组
-看起来好像和原来一样，但是我已经看不出细节的差异了。。
+> used[i-1]=true	代表同一个树枝上有重复
+> used[i-1]=false	代表同一个树层上有重复
+
+这里涉及到i是怎么循环的？
+
+为什么used[i-1]==false和等于true都给过？
+
+> 如果要对树层中前一位去重，就用used[i - 1] == false，如果要对树枝前一位去重用used[i - 1] == true。「对于排列问题，树层上去重和树枝上去重，都是可以的，但是树层上去重效率更高！」
+
+树层去重：
+![树层去重](./image/T47/树层去重.png)
+
+树枝去重：
+![树枝去重](./image/T47/树枝去重.png)
+
+排列的话used[i]改成true之后，遍历完还要再改回成false
