--- a/回溯算法知识要点.md
+++ b/回溯算法知识要点.md
@@ -346,10 +346,10 @@ if (i > startIndex && candidates[i] == candidates[i - 1] ) continue;
 
 > 如果要对树层中前一位去重，就用used[i - 1] == false，如果要对树枝前一位去重用used[i - 1] == true。「对于排列问题，树层上去重和树枝上去重，都是可以的，但是树层上去重效率更高！」
 
-树层去重：
+树层去重：nums[i] == nums[i - 1] && used[i - 1] == false
 ![树层去重](./image/T47/树层去重.png)
 
-树枝去重：
+树枝去重：nums[i] == nums[i - 1] && used[i - 1] == true
 ![树枝去重](./image/T47/树枝去重.png)
 
 排列的话used[i]改成true之后，遍历完还要再改回成false
